Updates header with new spacings. Updates pages with new header. Removes role for list. Fixes some spacing issues after refactor on alert and step by step.

--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -3,7 +3,10 @@
 @use "system/spacing";
 
 .osg-header {
-  @extend %osg-padding-horizontal-30-breakpoint-large;
+  @extend %osg-padding-left-none;
+  @extend %osg-padding-right-20;
+  @extend %osg-padding-left-30-breakpoint-large;
+  @extend %osg-padding-right-50-breakpoint-large;
   background-color: colors.$white;
   border-bottom: 1px solid colors.$gray;
 }
